Adjusted panel headers. Fixed another overflow bug with ScheduleJobs and JobDetails. Added gaps/padding for panels similar to GRM Dashboard

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -60,3 +60,7 @@ main {
     box-shadow: var(--container-color-border) 0 0 0 1px;
   }
 }
+
+rux-checkbox {
+  position: relative;
+}
